# arknights-mcp

./: .gitignore  LICENSE.txt  PLAN.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  devops.yml  documentation.yml  feature.yml
src/arknights_mcp/: __about__.py  __init__.py  raw_data.py  server.py
tests/: __init__.py
